Spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ main {
     min-height: 100vh;
     padding-top: 150px;
     padding-bottom: 50px;
-    background-color: #fcfcfc;
+    /* background-color: #fcfcfc; */
 }
 
 .custom-navbar {
@@ -132,7 +132,7 @@ main {
 }
 
 .about-us-section {
-    margin: 70px 0;
+    margin-top: 40px;
 }
 
 .about-page h4 {
@@ -144,6 +144,10 @@ main {
     font-size: 16px;
     line-height: 25px;
     margin-bottom: 20px;
+}
+
+.extra-margin {
+    margin-top: 50px;
 }
 
 .milestone-table tr td {
@@ -189,6 +193,7 @@ main {
 @media (max-width: 991px) {
     .footer-link {
         align-items: flex-end;
+        margin: 0 20px;
     }
 
     .build-box {
@@ -238,5 +243,26 @@ main {
 
     .about-page .col-md-6 img {
         margin-bottom: 20px;
+    }
+
+    .custom-footer {
+        padding: 2rem 0;
+    }
+
+    .custom-footer .container {
+        padding: 0;
+    }
+
+    .footer-right {
+        justify-content: center;
+    }
+
+    .custom-footer hr {
+        color: #fff;
+        opacity: 1;
+    }
+    
+    .footer-left p {
+        margin-bottom: 0;
     }
 }
